--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "author": "Driss Benadjal",
   "license": "MIT",
+  "icon": "./assets/images/DiscordLogo.ico",
   "scripts": {
     "start": "electron ."
   },
